--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,15 @@ body {
   background-color: #f8f9fa;
 }
 
+.navbar-brand {
+  font-size: 24px;
+  font-weight: bold;
+  color: #000;
+}
+b {
+  color: #7d5df6;
+}
+
 .dashboard-card {
   border: none;
   border-radius: 10px;
